remove gallery download endpoint added in previous commit, as there is one in public API already; also make 'remotePath' not required on download if 'remoteId' is present
